force-app/main/default/objects/BR_Document_History__c/BR_Document_History__c.object-meta.xml
<CustomObject>
    <description>This object is used in broker portal my profile page where the document expiry has to be noted</description>
    <label>BR Document History</label>
    <nameField>
        <displayFormat>BRH-{0000}</displayFormat>
        <label>BR Document History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BR Document Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>