force-app/main/default/objects/BR_Document_History__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BR Document Histories (Broker Account)</relationshipLabel>
    <relationshipName>BR_Document_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>