force-app/main/default/objects/BR_Document_History__c/fields/Broker_Registration__c.field-meta.xml
<CustomField>
    <fullName>Broker_Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Registration</label>
    <referenceTo>Broker_Registration__c</referenceTo>
    <relationshipLabel>BR Document Histories</relationshipLabel>
    <relationshipName>BR_Document_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>