force-app/main/default/objects/BR_Document_History__c/fields/Broker_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Broker_Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Renewal</label>
    <referenceTo>Broker_Renewal__c</referenceTo>
    <relationshipLabel>BR Document Histories</relationshipLabel>
    <relationshipName>BR_Document_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>