force-app/main/default/objects/BR_Document_History__c/fields/Content_Distribution_Created__c.field-meta.xml
<CustomField>
    <fullName>Content_Distribution_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content Distribution Created</label>
    <type>Checkbox</type>
</CustomField>