force-app/main/default/objects/BR_Document_History__c/fields/Document_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Link_Id__c</fullName>
    <label>Document Link Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>