force-app/main/default/objects/BR_Document_History__c/fields/Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_date__c</fullName>
    <label>Expiry date</label>
    <type>Date</type>
</CustomField>