force-app/main/default/objects/BR_Document_History__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passport</fullName>
            </value>
            <value>
                <fullName>Vat Excemption</fullName>
            </value>
            <value>
                <fullName>Visa Copy</fullName>
            </value>
            <value>
                <fullName>Emirates Id</fullName>
            </value>
            <value>
                <fullName>RERA Certificate</fullName>
            </value>
            <value>
                <fullName>Secondary Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>