force-app/main/default/objects/BR_Document_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>File_Name__c</columns>
    <columns>Expiry_date__c</columns>
    <columns>File_Type__c</columns>
    <columns>Broker_Registration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>